--- a/templates/chat.html
+++ b/templates/chat.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8" />
     <title>Chat with {{ other_user.username }}</title>
     <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/chat.css') }}" />
+    <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-
     <h2>Chat with {{ other_user.username }}</h2>
 
-    <p class="back-link"><a href="{{ url_for('chat') }}">Back to chats</a></p>
+    <p class="back-link">
+      <a href="{{ url_for('chat') }}">Back to chats</a>
+    </p>
 
     <div class="chat-box" id="chatBox">
         {% for message in messages %}
@@ -23,7 +24,7 @@
     <input type="text" id="messageInput" placeholder="Type your message..." autocomplete="off" />
     <button id="sendBtn">Send</button>
 
-    <div class="call-buttons">
+    <div style="display: flex; justify-content: space-between;">
         <button id="callButton">Call</button>
         <button id="hangupButton" disabled>Hang Up</button>
     </div>
@@ -145,6 +146,5 @@
             }
         });
     </script>
-
 </body>
 </html>
